--- a/prometheus.yml
+++ b/prometheus.yml
@@ -4,3 +4,8 @@ scrape_configs:
     static_configs:
       - targets: 
         - cadvisor:8080
+  - job_name: node
+    scrape_interval: 5s
+    static_configs:
+      - targets: 
+        - node-exporter:9100
